--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
    #nav-ul {
        list-style-image: none;
    }
-   .nav-li 
+   .nav-li {
        display: inline-block;
        padding: 0 10px;
    }
@@ -60,29 +60,3 @@ body {
    h2, h3 {
        margin: 0px;
    }
-
-/* portfolio styles */
-         .content h1 {
-             color: black;
-         }
-
-         #portfolio {
-             list-style-type: none;
-             padding-left: 0;
-         }
-
-         #portfolio li {
-             background: #fff;
-             padding: 10px;
-             border-radius: 10px;
-             margin-bottom: 10px;
-         }
-
-         #portfolio li:hover {
-             background: #eee;
-         }
-
-         #portfolio a {
-             text-decoration: none;
-             color: #454545;
-         }
